--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 smithay-client-toolkit = "=0.6.1"
 byteorder = "=1.3.1"
 rusttype = "=0.7.6"
+megaui = { git = "https://github.com/not-fl3/megaui.git" }
