--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ smithay-client-toolkit = "=0.6.1"
 byteorder = "=1.3.1"
 rusttype = "=0.7.6"
 megaui = { git = "https://github.com/LooMaclin/megaui.git", branch = "add_color_type" }
+itertools = "=0.8.0"
